frontend/src/index.css
body {
  position: relative;
  background-color: black;
  font-family: monospace;
  overflow: hidden;
}

#root {
  height: 100vh;
}

.btn-close {
  background-color: #ffc107;
}

/* Sign Up */
#sign-up-mask {
  width: 100vw;
  z-index: 2;
  position: absolute;
  background-color: #00000070;
}

#sign-up-div {
  background-image: url("./images/blob-scene-haikei.svg");
  background-size: cover;
  padding: 3rem;
  border-radius: 20px;
  aspect-ratio: 3/4;
  z-index: 3;
}

.form-control:focus {
  background-color: transparent;
  color: white;
}

#content {
  padding: 0;
  background-color: #000000cc;
  box-shadow: 0 0rem 1rem rgba(0, 0, 0, 1);
}

#lhs {
  padding: 0;
  width: auto;
}

#explore {
  position: sticky;
  top: 0;
}

#tweet {
  background-color: #c844ff;
  border-radius: 20px;
  padding: 0.7rem;
  width: auto;
}

#nav {
  position: sticky;
  top: 0;
  z-index: 1;
}

.p-y-2 {
  padding: 2rem 0 !important;
}

.overflow-y-scroll {
  overflow-y: scroll !important;
}

.nav-link {
  color: white;
  padding: 1rem;
  border-radius: 20px;
  margin: 0.6rem;
  opacity: 0;
  transform: translateX(-100%);
  transition: opacity 1s ease-out, transform 1s ease-out;
}

.nav-link.visible {
  opacity: 1;
  transform: translateX(0);
}

.nav-link.delay-0 {
  transition-delay: 0.1s;
}

.nav-link.delay-1 {
  transition-delay: 0.2s;
}

.nav-link.delay-2 {
  transition-delay: 0.3s;
}

.nav-link.delay-3 {
  transition-delay: 0.4s;
}

.nav-link.delay-4 {
  transition-delay: 0.5s;
}

.white-img {
  filter: brightness(0) invert(1);
}

#top-left {
  margin: 3rem 0;
  flex-wrap: nowrap;
}

#rettiwt {
  padding: 0;
  width: fit-content;
}

#top-mid {
  border-width: 0 0 1px 0;
  border-color: gray;
  border-style: solid;
  position: sticky;
  top: -1px;
  background-color: black;
  z-index: 1;
}

#search-engine {
  background-color: #00000080;
  border-radius: 20px;
  height: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
  box-shadow: 0.2rem 0.2rem 0.7rem rgb(0 0 0 / 55%);
  border: none;
}

#search-engine-div {
  background: #000000cc;
  border-radius: 20px;
  z-index: 4;
  box-shadow: 0.2rem 0.2rem 0.7rem rgb(0 0 0 / 55%);
  border: 1px solid white;
}

#search-result-div {
  margin: 0.7rem;
}

#search-icon {
  width: 1.3rem;
  margin: 0 0.4rem;
}

/* followeing */
#following-div {
  background: #00000096;
  /* padding: 1rem; */
  border-radius: 20px;
  box-shadow: 0.2rem 0.2rem 0.7rem rgb(0 0 0 / 55%);
  border: 1px solid;
}

.list-group-item {
  background-color: transparent;
  color: white;
}

#following-label {
  background-color: #00000080;
}

/* user */
#user {
  position: absolute;
  bottom: 3rem;
  height: 5rem;
  flex-direction: row;
}

#user-info {
  font-size: calc(10px + 0.8vw);
}

#icon {
  width: 5rem !important;
}

#avatar {
  width: auto;
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: center;
  border-radius: 70px;
  padding: 0;
  /* margin-right: 1rem; */
  box-shadow: 0.2rem 0.2rem 0.7rem rgb(0 0 0 / 55%);
}

img {
  width: 2rem;
  image-rendering: smooth;
}

.mr-1 {
  margin: 0 0.5rem;
}

#post-list {
  width: 100%;
  margin: 0;
  overflow-y: hidden;
}

#post {
  padding: 1.5rem !important;
}

.post {
  margin: 4%;
}

.post-user-info {
  height: 3.8rem;
  /* padding: 0 2rem; */
}

.post-user-avatar {
  margin: 0 0.5rem 0 0;
  height: 3.5rem;
  width: auto;
  aspect-ratio: 1/1;
  border-radius: 40px;
  object-fit: cover;
  object-position: center;
}

.post-user-id {
  flex-direction: column;
  align-items: unset !important;
}

.post-image-div {
  width: 100%;
  margin: 1rem 0;
  display: flex;
  justify-content: center;
}

.post-image {
  width: 100%;
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: center;
  border-radius: 6px;
}

.mask {
  background-color: #5e5e5e3d;
  border-radius: 20px;
  overflow-y: hidden;
  box-shadow: 0.2rem 0.2rem 0.7rem rgb(0 0 0 / 55%);
}

.mask-background {
  background-color: #0000001a;
  overflow-y: scroll;
  height: 100vh;
}

.mask-post {
  background-color: #0000009e;
  border-radius: 20px;
  width: 90%;
  overflow-y: hidden;
  margin: 1.5rem 0;
  box-shadow: 0rem 0rem 1rem rgb(0 0 0 / 40%);
}

.h4 {
  font-size: 1.3rem;
}

.h5 {
  font-size: 1rem;
}

.top-p-1 {
  padding: 1rem 1rem 0rem 1rem;
}

#you {
  border-right-style: solid;
  border-right-width: 1px;
  border-right-color: gray;
}

.nav-link:focus,
.nav-link:hover {
  color: #ffffff;
  background-color: #c844ff2e;
  font-weight: bold;
}
/* scrollbar */
/* width */
::-webkit-scrollbar {
  width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #6c757d;
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #c844ff;
}

@media (max-height: 650px) {
  #user {
    display: none !important;
  }
}

@media (max-width: 992px) {
  #rettiwt {
    display: none !important;
  }

  #explore {
    display: none;
  }
}

@media (max-width: 992px) {
  #nav {
    height: 0 !important;
  }
  #nav .nav {
    position: fixed;
    bottom: -8px;
    left: 0;
    width: 100%;
    justify-content: space-around;
    flex-direction: row !important;
    background-color: black;
    border-top-style: solid;
    border-top-color: #c844ff;
    border-top-width: 1px;
  }

  #explore {
    height: 0 !important;
  }

  #top-mid {
    box-shadow: 0 0rem 1rem rgba(0, 0, 0, 1);
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
  }

  #content {
    border-style: none;
    background-color: transparent;
    box-shadow: none;
  }
  #mid-center {
    margin: 0 0 10vh 0;
    overflow-y: hidden;
  }
  #search-engine-div {
    display: none;
  }

  #nav .a {
    display: inline-block;
    margin-right: 1rem;
  }

  #nav img {
    display: block;
    margin: 0;
  }

  #nav span {
    display: none;
  }

  #tweet {
    display: none !important;
  }

  #user {
    display: none !important;
  }

  #top-left {
    display: none !important;
  }

  #tweet-section {
    background-color: #000000cc;
    z-index: 3;
  }

  ::-webkit-scrollbar {
    display: none;
  }
}

/* curve */
.spacer {
  aspect-ratio: 900/600;
  width: 100%;
  background-repeat: no-repeat;
  background-position: bottom;
  background-size: cover;
}

.layer1 {
  background-image: url("./images/stacked-waves-haikei.svg");
}

@keyframes dash {
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: 100px 0;
  }
}

/* Tweet page */

#tweet-section {
  aspect-ratio: 3/4;
  padding: 2rem;
  z-index: 3;
}

#tweet-div {
  padding: 2rem;
}

#upload-image-section {
  text-align: center;
  cursor: pointer;
}

#upload-container {
  padding: 2rem 0 !important;
}

.cursor-pointer {
  cursor: pointer;
}

#upload-close-btn {
  border-radius: 50px;
  padding: 1rem;
}

#floatingTextarea2 {
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid white;
  border-radius: 0;
  color: white;
}

.floating {
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid white;
  border-radius: 0;
  color: white;
}

/* #upload-image-section .span {
  padding: 2rem;
} */

.tweet-mask {
  background-color: #2b2b2b;
  border-radius: 20px;
  overflow-y: hidden;
  box-shadow: 0 0 0.7rem rgb(0 0 0 / 55%);
}

#input-section {
  background-color: #5e5e5e3d;
  margin: 0 0 1rem 0;
  border: none;
  border-radius: 20px;
  height: 5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  box-shadow: 0 0 0.7rem rgb(0 0 0 / 55%);
  color: gray !important;
}

#tweet-section {
  padding: 0.5rem 0 !important;
}

#tweet-form {
  padding: 3rem 0;
}

#post-submit {
  background-color: #c844ff;
  border-radius: 20px;
  padding: 0.7rem;
  width: 40%;
  height: 4rem;
  border: none;
  box-shadow: 0 0 0.7rem rgb(0 0 0 / 55%);
}

#post-describtion {
  height: 15%;
}

#upload {
  width: 12rem;
  padding: 1rem;
}

#preview {
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: center;
  border-radius: 6px;
  padding: 0;
}

#image-upload {
  display: none;
}

/* .loader-container {
  display: flex;
  justify-content: center;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
} */

/* Spinner */
.spinner {
  width: 65px;
  aspect-ratio: 1/1;
  border: 8px solid;
  border-color: #c844ff transparent #c844ff transparent;
  border-radius: 50%;
  animation: spin-anim 1.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
}

@keyframes spin-anim {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* fade out animation */
.toast.show.tweet-mask {
  animation-name: fadeInHoldFadeOut;
  animation-duration: 5s;
  animation-fill-mode: forwards;
}

@keyframes fadeInHoldFadeOut {
  0% {
    opacity: 0;
  }
  10%,
  60% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/* profile  */
#profile-mask {
  background-color: #000000cc;
}

#profile-avatar {
  width: 70%;
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: center;
  box-shadow: 0 0 0.8rem rgb(255 255 255 / 53%);
}

.w-40 {
  width: 40%;
}

.w-60 {
  width: 60%;
}

.w-30 {
  width: 30%;
}

